fix: 검색 유효성 검사 메시지 z-index

--- a/style/index.css
+++ b/style/index.css
@@ -179,6 +179,7 @@ header.scrollDown {
   right: 0;
   color: white;
   transform: translateY(0.2rem);
+  z-index: 1;
 }
 
 #search-warning-msg::after {
